--- a/index.html
+++ b/index.html
@@ -7,17 +7,46 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section>
+   <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1> <span class="name-highlight"> Nazmul's </span> World</h1>
+            <h1> <span class="orange-highlight"> Nazmul's </span> World</h1>
             <h3>World class Profrssional Web Developer</h3>
             <p>Are you looking for a Professional Web developer?If your answer is yes, then you are at right place.</p>
             <p>I am Nazmul, a professional web developer.I am here to provide the Services from a simple website to huge database-driven custoom websites since last year. I built websites usilng those technologies including html, css, bootstarp, javascript and many more.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/nazmul-haque-naeem-6594ab1ab/">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="images/121.png" alt="my picture">
         </div>
    </section>
+   <section class="dream-area">
+       <div class="half-width">
+           <img src="images/image 11.png" alt="my second picture">
+       </div>
+       <div class="half-width">
+           <h2>Big Dream</h2>
+           <h3>Become a web developer</h3>
+           <p>I already learned basic HTML and css. I can build any simple website.I can even teach my grandma how to make somple website. My goal is to build 3 websites and learn advanced topics</p>
+           <a class="link-button" target="_blank" href="https://www.facebook.com/nazmul.nayem.01">Visit my facebook Profile</a>
+
+       </div>
+   </section>
+   <section class="experience-area">
+       <h2 id="special">Experiences: </h2>
+       <div id="full-stack" class="half-width single-experience">
+           <h2>Full Stack Web Developer</h2>
+           <h3 class="orange-highlight">2020-2021 | Pro level Web Developer</h3>
+           <p>I am the master of HTML, CSS & javascript. I know everything needed to make a website function efficient.I don't stop with the web.I want beyond with most popular javascript framework called Vue JS. ILeven know the deployment, server and security.I will give you 100% web solution </p>
+         </div>
+       <div id="Baby" class="half-width single-experience">
+           <h2>Baby Web Developer</h2>
+           <h3 class="orange-highlight">2020-2021 | Programming hero learner. </h3>
+            <p>They didn't offer me job.But I made myself as a remove web developer. I made their Website and showed it to them.They liked it. And uploaded the content.It was fun working at programming hero. </p>
+       </div>
+   </section>
+   <footer>
+       <p>Copyright © Saltside Technologies</p>
+   </footer>
 </body>
 </html>
